feat: working version

--- a/pages/pull-requests.html
+++ b/pages/pull-requests.html
@@ -97,6 +97,11 @@
           </h1>
 
           <p class="mb-5">Show your list of PRs in this page</p>
+          <form>
+            <label class="mb-5">Filter PRs by user: </label>
+            <input id="filter-prs-by-user" type="text" />
+          </form>
+
           <ul
             id="pull-requests-list"
             class="list-inline list-social-icons mb-0"
@@ -118,6 +123,6 @@
 
     <!-- Custom scripts for this template -->
     <script src="../js/resume.min.js"></script>
-    <!-- Link to the pull-requests.js file here -->
+    <script src="../js/pull-requests.js"></script>
   </body>
 </html>
