--- a/pages/my-github.html
+++ b/pages/my-github.html
@@ -104,6 +104,11 @@
             Use AJAX to load your repos from your Github and show them on this
             page.
           </p>
+          <form id="filter-repos-by-user">
+            <label class="mb-5">Filter PRs by user: </label>
+            <input type="text" id="filter-repos-by-user-input" />
+            <input type="submit" />
+          </form>
 
           <ul id="repos-list" class="list-inline list-social-icons mb-0">
             <li>
