--- a/pages/pull-requests.html
+++ b/pages/pull-requests.html
@@ -97,6 +97,10 @@
           </h1>
 
           <p class="mb-5">Show your list of PRs in this page</p>
+          <form>
+            <label>Filter PRs by user:</label>
+            <input id="search-box" type="text" />
+          </form>
           <ul
             id="pull-requests-list"
             class="list-inline list-social-icons mb-0"
@@ -118,6 +122,6 @@
 
     <!-- Custom scripts for this template -->
     <script src="../js/resume.min.js"></script>
-    <!-- Link to the pull-requests.js file here -->
+    <script src="../js/pull-requests.js"></script>
   </body>
 </html>
